:recycle: set css conection

--- a/frontend/intro/index.html
+++ b/frontend/intro/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/global.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>AGENDA 2030: ODS</title>
 </head>
 
@@ -16,55 +22,55 @@
 
     <main>
         <a href="#">
-            <img src="./assets/img/ods-1.jpg" alt="Banner referente a ODS 1">
+            <img src="./assets/img/ods/ods-1.jpg" alt="Banner referente a ODS 1">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-2.png" alt="Banner referente a ODS 2">
+            <img src="./assets/img/ods/ods-2.png" alt="Banner referente a ODS 2">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-3.png" alt="Banner referente a ODS 3">
+            <img src="./assets/img/ods/ods-3.png" alt="Banner referente a ODS 3">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-4.png" alt="Banner referente a ODS 4">
+            <img src="./assets/img/ods/ods-4.png" alt="Banner referente a ODS 4">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-5.jpg" alt="Banner referente a ODS 5">
+            <img src="./assets/img/ods/ods-5.jpg" alt="Banner referente a ODS 5">
         </a>
         <a href="ods-6.html">
-            <img src="./assets/img/ods-6.jpg" alt="Banner referente a ODS 6">
+            <img src="./assets/img/ods/ods-6.jpg" alt="Banner referente a ODS 6">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-7.png" alt="Banner referente a ODS 7">
+            <img src="./assets/img/ods/ods-7.png" alt="Banner referente a ODS 7">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-8.png" alt="Banner referente a ODS 8">
+            <img src="./assets/img/ods/ods-8.png" alt="Banner referente a ODS 8">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-9.jpg" alt="Banner referente a ODS 9">
+            <img src="./assets/img/ods/ods-9.jpg" alt="Banner referente a ODS 9">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-10.jpg" alt="Banner referente a ODS 10">
+            <img src="./assets/img/ods/ods-10.jpg" alt="Banner referente a ODS 10">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-11.png" alt="Banner referente a ODS 11">
+            <img src="./assets/img/ods/ods-11.png" alt="Banner referente a ODS 11">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-12.jpg" alt="Banner referente a ODS 12">
+            <img src="./assets/img/ods/ods-12.jpg" alt="Banner referente a ODS 12">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-13.jpg" alt="Banner referente a ODS 13">
+            <img src="./assets/img/ods/ods-13.jpg" alt="Banner referente a ODS 13">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-14.jpg" alt="Banner referente a ODS 14">
+            <img src="./assets/img/ods/ods-14.jpg" alt="Banner referente a ODS 14">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-15.jpg" alt="Banner referente a ODS 15">
+            <img src="./assets/img/ods/ods-15.jpg" alt="Banner referente a ODS 15">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-16.png" alt="Banner referente a ODS 16">
+            <img src="./assets/img/ods/ods-16.png" alt="Banner referente a ODS 16">
         </a>
         <a href="#">
-            <img src="./assets/img/ods-17.png" alt="Banner referente a ODS 17">
+            <img src="./assets/img/ods/ods-17.png" alt="Banner referente a ODS 17">
         </a>
 
     </main>
